# niri-screenshare

./: Cargo.toml  Makefile  README.md  flake.nix
contrib/: .SRCINFO  PKGBUILD
data/: niri-portals.conf  niri-screenshare.service  niri.portal  org.freedesktop.impl.portal.desktop.niri.service  xdg-desktop-portal-niri.service
nix/: package.nix  shell.nix
src/: main.rs  niri_ipc.rs  portal_config.rs  screencopy.rs
src/screencast/: mod.rs  pick.rs  pw_backend.rs
