[package]
name = "niri-screenshare"
version = "0.1.0"
edition = "2021"

[features]
default = []
picker = []

[dependencies]
zbus = { version = "5", features = ["tokio"] }
tokio = { version = "1", features = ["rt", "macros", "time", "sync"] }
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
