[package]
name = "niri-screenshare"
version = "0.1.0"
edition = "2021"

[features]
default = ["picker"]
picker = ["dep:gtk4", "dep:libadwaita"]

[dependencies]
zbus = { version = "5", features = ["tokio"] }
tokio = { version = "1", features = ["rt", "macros", "time", "sync", "rt-multi-thread"] }
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
gtk4 = { version = "0.9", optional = true }
libadwaita = { version = "0.7", optional = true }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
