[package]
name = "niri-screenshare"
version = "0.2.0"
edition = "2021"
description = "Portal backend implementing ScreenCast for niri"
license = "GPL-3.0-or-later"
repository = "https://github.com/pantarune/niri-screenshare"
homepage = "https://github.com/pantarune/niri-screenshare"
keywords = ["niri", "portal", "screencast", "pipewire", "wayland"]
categories = ["multimedia::video", "os::linux-apis"]

[features]
default = ["picker"]
picker = ["dep:gtk4", "dep:libadwaita"]

[dependencies]
zbus = { version = "5", features = ["tokio"] }
tokio = { version = "1", features = ["rt", "macros", "time", "sync", "rt-multi-thread"] }
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
gtk4 = { version = "0.9", optional = true }
libadwaita = { version = "0.7", optional = true }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
